crates/capsec/tests/compile_fail/main_no_params.rs
/// #[capsec::main] requires a CapRoot parameter.
use capsec::prelude::*;

#[capsec::main]
fn main() {}
